Move some options from home page to settings, correctly style blurred text, hide nav when clicking anywhere on mobile

--- a/src/styles/text.less
+++ b/src/styles/text.less
@@ -72,7 +72,7 @@ pre {
 }
 
 .obfuscated, .obfuscated * {
-    color: transparent;
+    color: transparent !important;
     text-shadow: 0 0 3px @text-color;
 }
 
